--- a/Contacto.html
+++ b/Contacto.html
@@ -6,7 +6,7 @@
    <meta name=viewport content="width=device-width, initial-scale=1">
    <link rel="stylesheet" type="text/css" href="css/estilos.css">  
 </head>
-<body>
+<body class="color1">
    <div class="header">
         <ul class="header_nav">
             <li><a href="index.html">Home</a></li>
@@ -16,19 +16,33 @@
             <li><a href="Contacto.html">Contacto</a></li>
             </ul>
    </div>
-   <div class="p">FORMULARIO DE CONTACTO</div>
-   <form action="contacto.html" method="GET">
-   	<div>Nombre</div>
-   		<input type="text" name="nombre">
-   	<div>Correo Electrónico</div>
-   	    <input type="correoelectrónico" name="correo">
-   	<div>Asunto</div>
-   	    <input type="asunto" name="asunto">
-   	<div>Mensaje</div>
-   	    <textarea name="mensaje">
-        </textarea>
-        <input type="submit" name="enviar" value="ENVIAR">
-   </form>
+   <form class="contacto">
+    <div class="input-group">
+        <span class="input-group-text">Nombre y Apellido</span>
+    </div>
+    <div class="col-sm-10">
+        <input type="NombreyApellido" class="form-control" id="imputtext">
+    </div>
+    <div class="row mb-3">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Correo electrónico</label>
+    </div>
+    <div class="col-sm-10">
+        <input type="email" class="form-control" id="inputEmail3">
+    </div>
+    <div>
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Asunto</label>
+      </div>
+    <div class="col-sm-10">
+        <input type="email" class="form-control" id="inputEmail3">
+     </div>
+    </form>
+  <label for="floatingTextarea2" class="color">Comentarios</label>
+      <div class="form-floating">
+    <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
+</div>
+<div>
+<button type="submit" class="btn btn-primary">Sign in</button>
+</div>
 <div id="footer">
         <ul class="redes_sociales">
             <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="bi bi-youtube">YouTube</i></a></li>
@@ -40,3 +54,16 @@
     </div class="footer">
 </body>
 </html>
+<!--<div class="p">FORMULARIO DE CONTACTO</div>
+<form action="contacto.html" method="GET">
+    <div>Nombre</div>
+        <input type="text" name="nombre">
+    <div>Correo Electrónico</div>
+        <input type="correoelectrónico" name="correo">
+    <div>Asunto</div>
+        <input type="asunto" name="asunto">
+    <div>Mensaje</div>
+        <textarea name="mensaje">
+     </textarea>
+     <input type="submit" name="enviar" value="ENVIAR">
+</form>-->
