varios cambios en html y css

--- a/Contacto.html
+++ b/Contacto.html
@@ -9,11 +9,11 @@
 <body class="color1">
    <div class="header">
         <ul class="header_nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Biografía.html">Biografía</a></li>
-            <li><a href="Discografía.html">Discografía</a></li>
-            <li><a href="Galería.html">Galería</a></li>
-            <li><a href="Contacto.html">Contacto</a></li>
+            <li><a href="index.html" class="color2">Home</a></li>
+            <li><a href="Biografía.html" class="color2">Biografía</a></li>
+            <li><a href="Discografía.html" class="color2">Discografía</a></li>
+            <li><a href="Galería.html" class="color2">Galería</a></li>
+            <li><a href="Contacto.html" class="color2">Contacto</a></li>
             </ul>
    </div>
    <form class="contacto">
@@ -41,7 +41,7 @@
     <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
 </div>
 <div>
-<button type="submit" class="btn btn-primary">Sign in</button>
+<button type="submit" class="btn btn-primary">ENVIAR</button>
 </div>
 <div id="footer">
         <ul class="redes_sociales">
@@ -54,16 +54,3 @@
     </div class="footer">
 </body>
 </html>
-<!--<div class="p">FORMULARIO DE CONTACTO</div>
-<form action="contacto.html" method="GET">
-    <div>Nombre</div>
-        <input type="text" name="nombre">
-    <div>Correo Electrónico</div>
-        <input type="correoelectrónico" name="correo">
-    <div>Asunto</div>
-        <input type="asunto" name="asunto">
-    <div>Mensaje</div>
-        <textarea name="mensaje">
-     </textarea>
-     <input type="submit" name="enviar" value="ENVIAR">
-</form>-->
