--- a/Contacto.html
+++ b/Contacto.html
@@ -9,11 +9,11 @@
 <body class="color1">
    <div class="header">
         <ul class="header_nav">
-            <li><a href="index.html" class="color2">Home</a></li>
-            <li><a href="Biografía.html" class="color2">Biografía</a></li>
-            <li><a href="Discografía.html" class="color2">Discografía</a></li>
-            <li><a href="Galería.html" class="color2">Galería</a></li>
-            <li><a href="Contacto.html" class="color2">Contacto</a></li>
+            <li><a href="index.html" class="color">Home</a></li>
+            <li><a href="Biografía.html" class="color">Biografía</a></li>
+            <li><a href="Discografía.html" class="color">Discografía</a></li>
+            <li><a href="Galería.html" class="color">Galería</a></li>
+            <li><a href="Contacto.html" class="color">Contacto</a></li>
             </ul>
    </div>
    <form class="contacto">
