--- a/Discografía.html
+++ b/Discografía.html
@@ -17,17 +17,17 @@
             </ul>
     </div>
     <div class="p">DISCOGRAFÍA</div>
-        <ul class="discos1"> 
+        <ul class="discos discos1"> 
             <img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="15%" height="200px">
      	    <li>Burbuja loca- Single</li>
             <img src="assets/unanoche.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Una noche en el paraíso escondido</li>
         </ul>
-        <ul class="discos2"> 
+        <ul class="discos discos2"> 
             <img src="assets/demonio.jpeg" alt="Los Tabaleros"width="15%" height="200px">
      	    <li>Demonio Paraguayo-Single</li>
             <img src="assets/chuy.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Chuy</li>
         </ul>
-        <ul class="discos3"> 
+        <ul class="discos discos3"> 
             <img src="assets/OIP.jpg" alt="Los Tabaleros" width="15%" height="200px">
      	    <li>Tuy</li>
             <img src="assets/lolita.jpg" alt="Los Tabaleros" width="15%" height="200px">
