--- a/Discografía.html
+++ b/Discografía.html
@@ -22,17 +22,20 @@
      	    <li>Burbuja loca- Single</li>
             <img src="assets/unanoche.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Una noche en el paraíso escondido</li>
         </ul>
+        <button class="orange button">Descarga</button>
         <ul class="discos discos2"> 
             <img src="assets/demonio.jpeg" alt="Los Tabaleros"width="15%" height="200px">
      	    <li>Demonio Paraguayo-Single</li>
             <img src="assets/chuy.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Chuy</li>
         </ul>
+        <button class="white button">Descarga</button>
         <ul class="discos discos3"> 
             <img src="assets/OIP.jpg" alt="Los Tabaleros" width="15%" height="200px">
      	    <li>Tuy</li>
             <img src="assets/lolita.jpg" alt="Los Tabaleros" width="15%" height="200px">
      	    <li>Lolita</li>
         </ul>
+        <button class="yellow button">Descarga</button>
     <div id="footer">
         <ul class="redes_sociales">
             <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="bi bi-youtube">YouTube</i></a></li>
