elimino comentarios en css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <ul class="header_nav">
+        <ul class="header_nav" margin-bottom="10px">
             <li><a href="index.html">Home</a></li>
             <li><a href="Biografía.html">Biografía</a></li>
             <li><a href="Discografía.html">Discografía</a></li>
