--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsde">
 </head>
 <body>
-    <div class="header">
-        <ul class="header_nav" margin-bottom="25px">
+    <div class="header" margin-bottom="25px">
+        <ul class="header_nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="Biografía.html">Biografía</a></li>
             <li><a href="Discografía.html">Discografía</a></li>
