modificaciones en margin

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsde">
 </head>
 <body>
-    <div class="header" margin-bottom="25%">
+    <div class="header">
         <ul class="header_nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="Biografía.html">Biografía</a></li>
@@ -18,7 +18,7 @@
         </ul>
     </div>
     <div>
-        <p class="titulo" margin-top="25%">Los Tabaleros</p>
+        <p class="titulo">Los Tabaleros</p>
     </div>
     <img src="assets/taba.png" alt="Los Tabaleros" position="fixed" width="45%">
     <div class="p">
