--- a/Galería.html
+++ b/Galería.html
@@ -16,7 +16,7 @@
             <li><a href="Contacto.html">Contacto</a></li>
             </ul>
          </div>
-   <div class="p">GALERÍA</p></div>
+   <div class="p">GALERÍA</div>
    <div>FOTOS</div>
    <img src="assets/oi1.jpg" alt="Los Tabaleros" width="35%" height="300px">
    <img src="assets/oi2.jpg" alt="Los Tabaleros" width="35%" height="300px">
