--- a/Biografía.html
+++ b/Biografía.html
@@ -16,7 +16,7 @@
             <li><a href="Contacto.html">Contacto</a></li>
             </ul>
     </div>
-    <div class="p">BIOGRAFÍA</div>
+    <div class="subtitulo">Biografía</div>
     <img src="assets/lostabaa.png" alt="Los Tabaleros" width="50%" height="130px">
     <p>Los Tabaleros es un grupo porteño folclórico con influencias del punk rock. En sus primeros años se dedicaron a interpretar y a entender el más tradicional folk vernáculo y poco a poco hicieron carne su necesidad real de componer y expresarse.
 
