--- a/Discografía.html
+++ b/Discografía.html
@@ -16,10 +16,9 @@
             <li><a href="Contacto.html">Contacto</a></li>
             </ul>
     </div>
-    <div class="p">DISCOGRAFÍA</div>
+    <div class="subtitulo">Discografía</div>
         <ul class="discos discos1"> 
-            <img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="15%" height="200px">
-     	    <li>Burbuja loca- Single</li>
+            <img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Burbuja loca- Single</li>
             <img src="assets/unanoche.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Una noche en el paraíso escondido</li>
         </ul>
         <button class="orange button">Descarga</button>
