--- a/Contacto.html
+++ b/Contacto.html
@@ -16,6 +16,7 @@
             <li><a href="Contacto.html" class="color">Contacto</a></li>
             </ul>
    </div>
+   <div class="subtitulo">Contacto</div>
    <form class="contacto">
     <div class="input-group">
         <span class="input-group-text">Nombre y Apellido</span>
