modific en index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="Contacto.html">Contacto</a></li>
         </ul>
     </div>
-    <div>
+    <div data-aos="zoom-in-down">
         <p class="titulo">Los Tabaleros</p>
     </div>
     <img src="assets/taba.png" alt="Los Tabaleros" position="fixed" width="45%">
