modif animación titulo de index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsde">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -17,8 +18,8 @@
             <li><a href="Contacto.html">Contacto</a></li>
         </ul>
     </div>
-    <div data-aos="zoom-in-down">
-        <p class="titulo">Los Tabaleros</p>
+    <div >
+        <p class="titulo" data-aos="zoom-in">Los Tabaleros</p>
     </div>
     <img src="assets/taba.png" alt="Los Tabaleros" position="fixed" width="45%">
     <div class="p">
