modif en titulo index -agrego animación

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsde">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <div class="header">
@@ -18,8 +21,8 @@
             <li><a href="Contacto.html">Contacto</a></li>
         </ul>
     </div>
-    <div >
-        <p class="titulo" data-aos="zoom-in">Los Tabaleros</p>
+    <div class="animate__animated animate__jackInTheBox">
+        <p class="titulo"> Los Tabaleros</p>
     </div>
     <img src="assets/taba.png" alt="Los Tabaleros" position="fixed" width="45%">
     <div class="p">
