agrego imagen It2 a carpetta assets

--- a/Contacto.html
+++ b/Contacto.html
@@ -17,6 +17,7 @@
             </ul>
    </div>
    <div class="subtitulo1">Contacto</div>
+   <img src="assets/It2.png" alt="Los Tabaleros en blanco y negro" width="50%" height="130px">
    <form class="contacto">
     <div class="input-group">
         <span class="input-group-text">Nombre y Apellido</span>
