modificaciones en carpeta css

--- a/Contacto.html
+++ b/Contacto.html
@@ -17,7 +17,7 @@
             </ul>
    </div>
    <div class="subtitulo1">Contacto</div>
-   <img src="assets/It2.png" alt="Los Tabaleros en blanco y negro" width="50%" height="130px">
+   <br><img src="assets/byn.png" alt="Los Tabaleros en blanco y negro" size="50px" width="20%" height="180px"></br>
    <form class="contacto">
     <div class="input-group">
         <span class="input-group-text">Nombre y Apellido</span>
