--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsde">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
 </head>
 <body>
     <div class="header">
-        <ul class="header_nav">
+        <ul class="header_nav">  
             <li><a href="index.html">Home</a></li>
             <li><a href="Biografía.html">Biografía</a></li>
             <li><a href="Discografía.html">Discografía</a></li>
             <li><a href="Galería.html">Galería</a></li>
-            <li><a href="Contacto.html">Contacto</a></li>
+            <li><a href="Contacto.html">Contacto</a></li>   
         </ul>
     </div>
     <div class="animate__animated animate__jackInTheBox">
