agrego banner en index

--- a/Biografía.html
+++ b/Biografía.html
@@ -17,7 +17,7 @@
             </ul>
     </div>
     <div class="subtitulo">Biografía</div>
-    <br><img src="assets/lostabaa.png" alt="Los Tabaleros" width="50%" height="130px"></br>
+    <br><img src="assets/bannerfecha.png" alt="Los Tabaleros" width="50%" height="130px"></br>
     <p>Los Tabaleros es un grupo porteño folclórico con influencias del punk rock. En sus primeros años se dedicaron a interpretar y a entender el más tradicional folk vernáculo y poco a poco hicieron carne su necesidad real de componer y expresarse.
 
     La banda tiene un origen folclórico pero también abrazan todo tipo de estéticas musicales y artísticas, llevan a cabo obras performáticas pasando desde el formato acústicos a teatro a ciegas, como también recitales en la escena del rock nacional con presentaciones en Centro Cultural Recoleta, CC Matienzo, Uniclub, Konex, Niceto, Teatro Caras y Caretas, Café Vinilo, Mastai (Festival en San Pedro para 40 mil personas junto a bandas populares de la escena del rock).
