modificaciones en index

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <div class="animate__animated animate__jackInTheBox">
         <p class="titulo"> Los Tabaleros</p>
     </div>
-    <img src="assets/taba.png" alt="Los Tabaleros" position="fixed" width="45%">
+    <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p">
-        <p>Los Tabaleros es un grupo porteño folclórico con influencias del punk rock. En sus primeros años se dedicaron a interpretar y a entender el más tradicional folk vernáculo y poco a poco hicieron carne su necesidad real de componer y expresarse.</p>
+        <br>Los Tabaleros es un grupo porteño folclórico con influencias del punk rock. En sus primeros años se dedicaron a interpretar</br>
+        <br>y a entender el más tradicional folk vernáculo y poco a poco hicieron carne su necesidad real de componer y expresarse.</br>
     </div>
     <div class="imagenes">
     <img src="assets/m.jpg" alt="Los Tabaleros" display="inline" width= "20%">
