se agrega animación en galería

--- a/Galería.html
+++ b/Galería.html
@@ -18,21 +18,30 @@
          </div>
    <div class="subtitulo">Galería</div>
    <div>FOTOS</div>
-   <img src="assets/oi1.jpg" alt="Los Tabaleros" width="35%" height="300px">
-   <img src="assets/oi2.jpg" alt="Los Tabaleros" width="35%" height="300px">
-   <img src="assets/oi3.jpg" alt="Los Tabaleros" width="35%" height="300px">
-   <img src="assets/oi4.webp" alt="Los Tabaleros" width="35%" height="300px">
-   <div>VIDEOS</div>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/KMXrDGTHJKo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/j3EksMpPMUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <div id="footer">
-        <ul class="redes_sociales">
+   <div class="grupo1">
+      <div class="foto">
+         <img src="assets/oi1.jpg" alt="Los Tabaleros" width="80%" height="300px">
+      </div>
+      <div class="foto">
+      <img src="assets/oi2.jpg" alt="Los Tabaleros" width="118%" height="300px" left="100px">
+      </div>
+</div>
+<div class="grupo2">
+   <div class="foto">
+         <img src="assets/oi3.jpg" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+   </div>
+   <div class="foto">
+         <img src="assets/oi4.webp" alt="Los Tabaleros" width="105%" height="300px">
+   </div>
+</div>
+<div id="footer">
+   <ul class="redes_sociales">
             <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="bi bi-youtube">YouTube</i></a></li>
             <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="bi bi-facebook">Facebook</i></a></li>
             <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="bi bi-twitter">Twitter</i></a></li>
             <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="bi bi-instagram">Instagram</i></a></li>
-        </ul>        
-        <p>@lostabaleros</p>
-    </div class="footer">
+   </ul>        
+   <p>@lostabaleros</p>
+</div class="footer">
 </body>
 </html>
