modificaciones en parrafo

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
         <p class="titulo"> Los Tabaleros</p>
     </div>
     <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
-    <div class="p">
-        <br>Los Tabaleros es un grupo porteño folclórico con influencias del punk rock. En sus primeros años se dedicaron a interpretar</br>
-        <br>y a entender el más tradicional folk vernáculo y poco a poco hicieron carne su necesidad real de componer y expresarse.</br>
-    </div>
+    <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
     <div class="imagenes">
     <img src="assets/m.jpg" alt="Los Tabaleros" display="inline" width= "20%">
     <img src="assets/f.jpg" alt="Los Tabaleros" display="inline" width="20%">
