se agregan iconos en redes sociales

--- a/Galería.html
+++ b/Galería.html
@@ -35,11 +35,11 @@
 </div>
 <div id="footer">
    <ul class="redes_sociales">
-            <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="bi bi-youtube">YouTube</i></a></li>
-            <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="bi bi-facebook">Facebook</i></a></li>
-            <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="bi bi-twitter">Twitter</i></a></li>
-            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="bi bi-instagram">Instagram</i></a></li>
-   </ul>        
+      <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a>
+      <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a>
+      <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a>
+      <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a> 
+  </ul>       
    <p>@lostabaleros</p>
 </div class="footer">
 </body>
