--- a/Biografía.html
+++ b/Biografía.html
@@ -31,11 +31,11 @@
     "¡TUY!", el tercer álbum de Los Tabaleros contó con la dirección de orquesta y producción de Juan Gigena Ábalos. Se grabó en MCL Records, El Gorrion Negro y TUCO Estudio. Fue masterizado por el reconocido ingeniero Daniel Ovie. Michel Peyronel participa en la introducción en francés de "Chiquita".</p>
     <div id="footer">
         <ul class="redes_sociales">
-            <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="bi bi-youtube">YouTube</i></a></li>
-            <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="bi bi-facebook">Facebook</i></a></li>
-            <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="bi bi-twitter">Twitter</i></a></li>
-            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="bi bi-instagram">Instagram</i></a></li>
-        </ul>        
+            <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a>
+            <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a>
+            <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a>
+            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a> 
+        </ul>      
         <p>@lostabaleros</p>
     </div class="footer">
 </body>
