--- a/Discografía.html
+++ b/Discografía.html
@@ -37,58 +37,14 @@
         <button class="yellow button">Descarga</button>
     <div id="footer">
         <ul class="redes_sociales">
-            <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="bi bi-youtube">YouTube</i></a></li>
-            <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="bi bi-facebook">Facebook</i></a></li>
-            <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="bi bi-twitter">Twitter</i></a></li>
-            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="bi bi-instagram">Instagram</i></a></li>
+            <ul class="redes_sociales">
+                <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a>
+                <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a>
+                <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a>
+                <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a> 
+            </ul>  
         </ul>        
         <p>@lostabaleros</p>
     </div class="footer">
 </body>
 </html>
-<!--<!DOCTYPE html>
-<html>
-<head>
-    <title>lostabaleros</title>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
-</head>
-<body>
-    <div class="header">
-        <ul class="header_nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Biografía.html">Biografía</a></li>
-            <li><a href="Discografía.html">Discografía</a></li>
-            <li><a href="Galería.html">Galería</a></li>
-            <li><a href="Contacto.html">Contacto</a></li>
-            </ul>
-    </div>
-    <div class="p">DISCOGRAFÍA</div>
-        <ul class="discos1"> 
-            <img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="15%" height="200px">
-     	    <li>Burbuja loca- Single</li>
-            <img src="assets/unanoche.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Una noche en el paraíso escondido</li>
-        </ul>
-        <ul class="discos2"> 
-            <img src="assets/demonio.jpeg" alt="Los Tabaleros"width="15%" height="200px">
-     	    <li>Demonio Paraguayo-Single</li>
-            <img src="assets/chuy.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Chuy</li>
-        </ul>
-        <ul class="discos3"> 
-            <img src="assets/OIP.jpg" alt="Los Tabaleros" width="15%" height="200px">
-     	    <li>Tuy</li>
-            <img src="assets/lolita.jpg" alt="Los Tabaleros" width="15%" height="200px">
-     	    <li>Lolita</li>
-        </ul>
-    <div id="footer">
-        <ul class="redes_sociales">
-            <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="bi bi-youtube">YouTube</i></a></li>
-            <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="bi bi-facebook">Facebook</i></a></li>
-            <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="bi bi-twitter">Twitter</i></a></li>
-            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="bi bi-instagram">Instagram</i></a></li>
-        </ul>        
-        <p>@lostabaleros</p>
-    </div class="footer">
-</body>
-</html>-->
