--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <link rel="stylesheet" href="https://cdn.jsde">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
+    <link rel="stylesheet" href="../icofont/icofont.min.css">
 </head>
 <body>
     <div class="header">
@@ -32,12 +32,12 @@
     </div>  
     <div id="footer">
         <ul class="redes_sociales">
-            <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="bi bi-youtube">YouTube</i></a></li>
-            <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="bi bi-facebook">Facebook</i></a></li>
-            <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="bi bi-twitter">Twitter</i></a></li>
-            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="bi bi-instagram">Instagram</i></a></li>
-        </ul>        
-        <p>@lostabaleros</p>
+            <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a>
+            <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a>
+            <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a>
+            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a> 
+        </ul>  
+    <p>@lostabaleros</p>
     </div class="footer">
     </body>
 </html>
