--- a/Contacto.html
+++ b/Contacto.html
@@ -17,6 +17,7 @@
             </ul>
    </div>
    <div class="subtitulo1">Contacto</div>
+   <div class="cont">
    <form class="contacto">
     <div class="input-group">
         <span class="input-group-text">Nombre y Apellido</span>
@@ -43,6 +44,7 @@
 </div>
 <div>
 <button type="submit" class="btn btn-primary">ENVIAR</button>
+</div>
 </div>
 <div id="footer">
     <ul class="redes_sociales">
