--- a/Discografía.html
+++ b/Discografía.html
@@ -17,23 +17,24 @@
             </ul>
     </div>
     <div class="subtitulo">Discografía</div>
-        <ul class="discos discos1"> 
-            <img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Burbuja loca- Single</li>
-            <img src="assets/unanoche.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Una noche en el paraíso escondido</li>
+        <ul class="discos1"> 
+            <img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="25%" height="350px">
+            <li>Burbuja loca- Single</li>
+            <img src="assets/unanoche.jpg" alt="Los Tabaleros" width="25%" height="350px">
+            <li>Una noche en el paraíso escondido</li>
         </ul>
-        <button class="orange button">Descarga</button>
-        <ul class="discos discos2"> 
-            <img src="assets/demonio.jpeg" alt="Los Tabaleros"width="15%" height="200px">
-     	    <li>Demonio Paraguayo-Single</li>
-            <img src="assets/chuy.jpg" alt="Los Tabaleros" width="15%" height="200px"><li>Chuy</li>
+        <ul class="discos2">
+            <img src="assets/demonio.jpeg" alt="Los Tabaleros"width="25%" height="350px">
+            <li>Demonio Paraguayo-Single</li>
+            <img src="assets/chuy.jpg" alt="Los Tabaleros" width="25%" height="350px">
+            <li>Chuy</li>
         </ul>
-        <button class="white button">Descarga</button>
-        <ul class="discos discos3"> 
-            <img src="assets/OIP.jpg" alt="Los Tabaleros" width="15%" height="200px">
-     	    <li>Tuy</li>
-            <img src="assets/lolita.jpg" alt="Los Tabaleros" width="15%" height="200px">
-     	    <li>Lolita</li>
-        </ul>
+        <ul class="discos3">
+            <img src="assets/OIP.jpg" alt="Los Tabaleros" width="25%" height="350px">
+            <li>Tuy</li>
+            <img src="assets/lolita.jpg" alt="Los Tabaleros" width="25%" height="350px">
+            <li>Lolita</li>
+         </ul>
         <button class="yellow button">Descarga</button>
     <div id="footer">
         <ul class="redes_sociales">
