cambios en discografia, biografía y galería

--- a/Discografía.html
+++ b/Discografía.html
@@ -18,33 +18,25 @@
     </div>
     <div class="subtitulo">Discografía</div>
         <ul class="discos1"> 
-            <img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="25%" height="350px">
-            <li>Burbuja loca- Single</li>
-            <img src="assets/unanoche.jpg" alt="Los Tabaleros" width="25%" height="350px">
-            <li>Una noche en el paraíso escondido</li>
+            <div><img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img src="assets/unanoche.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
         </ul>
         <ul class="discos2">
-            <img src="assets/demonio.jpeg" alt="Los Tabaleros"width="25%" height="350px">
-            <li>Demonio Paraguayo-Single</li>
-            <img src="assets/chuy.jpg" alt="Los Tabaleros" width="25%" height="350px">
-            <li>Chuy</li>
+            <div><img src="assets/demonio.jpeg" alt="Los Tabaleros"width="100%" height="320px"></div>
+            <div><img src="assets/chuy.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
         </ul>
         <ul class="discos3">
-            <img src="assets/OIP.jpg" alt="Los Tabaleros" width="25%" height="350px">
-            <li>Tuy</li>
-            <img src="assets/lolita.jpg" alt="Los Tabaleros" width="25%" height="350px">
-            <li>Lolita</li>
+            <div><img src="assets/OIP.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img src="assets/lolita.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
          </ul>
-        <button class="yellow button">Descarga</button>
+        <button class="button">Descarga</button>
     <div id="footer">
-        <ul class="redes_sociales">
             <ul class="redes_sociales">
                 <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a>
                 <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a>
                 <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a>
                 <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a> 
-            </ul>  
-        </ul>        
+            </ul>      
         <p>@lostabaleros</p>
     </div class="footer">
 </body>
