--- a/Biografía.html
+++ b/Biografía.html
@@ -17,8 +17,8 @@
             </ul>
     </div>
     <div class="subtitulo">Biografía</div>
-    <br><img src="assets/lostabaa.png" alt="Los Tabaleros" width="50%" height="130px"></br>
-    <p>Los Tabaleros es un grupo porteño folclórico con influencias del punk rock. En sus primeros años se dedicaron a interpretar y a entender el más tradicional folk vernáculo y poco a poco hicieron carne su necesidad real de componer y expresarse.
+    <br><img src="assets/fondobio.png" alt="Los Tabaleros" width="50%" height="500px"></br>
+    <p class="textobio">Los Tabaleros es un grupo porteño folclórico con influencias del punk rock. En sus primeros años se dedicaron a interpretar y a entender el más tradicional folk vernáculo y poco a poco hicieron carne su necesidad real de componer y expresarse.
     La banda tiene un origen folclórico pero también abrazan todo tipo de estéticas musicales y artísticas, llevan a cabo obras performáticas pasando desde el formato acústicos a teatro a ciegas, como también recitales en la escena del rock nacional con presentaciones en Centro Cultural Recoleta, CC Matienzo, Uniclub, Konex, Niceto, Teatro Caras y Caretas, Café Vinilo, Mastai (Festival en San Pedro para 40 mil personas junto a bandas populares de la escena del rock).
     La fusión de estilos les permitió tocar también en la Fiesta Nacional de la Miel en San Vicente ante 30 mil personas acompañados por don Vitillo Abalos y Juan Gigena Abalos, visitando dos veces el programa “Sin Estribos” del Cholo Gomez Castañon, y más.
     El primer álbum de Los Tabaleros se editó en 2009:"Carmesí", y en 2013, gracias a la intervención de Ricardo Iorio, llegaron al mítico estudio Del Abasto al Pasto para trabajar con el ingeniero y productor Álvaro Villagra y trabajar en la segunda placa: "Lolita".
