cambios en redes sociales

--- a/Galería.html
+++ b/Galería.html
@@ -5,6 +5,7 @@
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1">
    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+   <link rel="stylesheet" href="../icofont/icofont.min.css">
 </head>
 <body>
    <div class="header">
@@ -24,15 +25,15 @@
       <div class="foto">
       <img src="assets/oi2.jpg" alt="Los Tabaleros" width="118%" height="300px" left="100px">
       </div>
-      </div>
-      <div class="grupo2">
+   </div>
+   <div class="grupo2">
       <div class="foto">
       <img src="assets/oi3.jpg" alt="Los Tabaleros" width="89%" height="300px" left="10px">
       </div>
       <div class="foto">
          <img src="assets/oi4.webp" alt="Los Tabaleros" width="105%" height="300px">
+      </div>
    </div>
-</div>
 <div id="footer">
    <ul class="redes_sociales">
        <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a>
