--- a/Contacto.html
+++ b/Contacto.html
@@ -4,7 +4,8 @@
    <title>lostabaleros</title>
    <meta charset=utf-8>
    <meta name=viewport content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" type="text/css" href="css/estilos.css">  
+   <link rel="stylesheet" type="text/css" href="css/estilos.css">
+   <link rel="stylesheet" href="../icofont/icofont.min.css">
 </head>
 <body class="color1">
    <div class="header">
