--- a/Contacto.html
+++ b/Contacto.html
@@ -44,7 +44,18 @@
     <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
 </div>
 <div>
-<button type="submit" class="btn btn-primary">ENVIAR</button>
+<button type="submit" class="btn btn" data-toggle="modal" data-target="#contenedor-modal">ENVIAR</button>
+</div>
+<div class="modal fade" id="contenedor-modal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="nodal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Disculpe las molestias</h2>
+                <button class="close" data-dismiss="modal">
+                    <span>&times</span>
+                </button>
+            </div>
+    <div class="modal-body"><p>Página momentáneamente desactivada</p></div>
 </div>
 </div>
 <div id="footer">
