cambios en navegador

--- a/Biografía.html
+++ b/Biografía.html
@@ -24,16 +24,16 @@
                     <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="biografia.html">Biografía</a>
+                    <a class="nav-link" href="Biografia.html">Biografía</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="discografia.html">Discografía</a>
+                    <a class="nav-link" href="Discografía.html">Discografía</a>
                   </li>  
                   <li class="nav-item">
-                    <a class="nav-link" href="galeria.html">Galería</a>
+                    <a class="nav-link" href="Galería.html">Galería</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="Contacto.html">Contacto</a>
                   </li>
                 </ul>
             </div>
