--- a/Biografía.html
+++ b/Biografía.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header" class="bg-light">
         <div class="container-flex">    
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#6610f2">
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f">
             <div class="container-fluid"> 
               <a class="navbar-brand" href="#"></a> 
               <img src="assets/logotaba.jpg" alt="logotaba" width="100px" height="100px">
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Biografia.html">Biografía</a>
+                    <a class="nav-link" href="Biografía.html">Biografía</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Discografía.html">Discografía</a>
