--- a/index.html
+++ b/index.html
@@ -4,19 +4,43 @@
     <title>lostabaleros</title>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
     <link rel="stylesheet" href="../icofont/icofont.min.css">
 </head>
 <body>
-    <div class="header">
-        <ul class="header_nav">  
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Biografía.html">Biografía</a></li>
-            <li><a href="Discografía.html">Discografía</a></li>
-            <li><a href="Galería.html">Galería</a></li>
-            <li><a href="Contacto.html">Contacto</a></li>   
-        </ul>
+    <div id="header" class="bg-light">
+        <div class="container-flex">    
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f">
+            <div class="container-fluid"> 
+              <a class="navbar-brand" href="#"></a> 
+              <img src="assets/logotaba.jpg" alt="logotaba" width="100px" height="100px">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>  
+              <div class="collapse navbar-collapse" id="navbarNav"> 
+                <ul class="nav nav-pills flex-column flex-sm-row">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Biografía.html">Biografía</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Discografía.html">Discografía</a>
+                  </li>  
+                  <li class="nav-item">
+                    <a class="nav-link" href="Galería.html">Galería</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Contacto.html">Contacto</a>
+                  </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    </div>
     </div>
     <div class="animate__animated animate__jackInTheBox">
         <p class="titulo"> Los Tabaleros</p>
@@ -39,5 +63,6 @@
         </ul>  
     <p>@lostabaleros</p>
     </div class="footer">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
