modificaciones de estructura en discografia galeria e index

--- a/Galería.html
+++ b/Galería.html
@@ -41,23 +41,61 @@
   </div>
   </div>
   </div>
-   <div class="subtitulo">Galería</div>
+   <div class="subtitulo3">Galería</div>
+<div>
    <div class="grupo1">
       <div class="foto">
          <img src="assets/oi1.jpg" alt="Los Tabaleros" width="80%" height="300px">
       </div>
       <div class="foto">
-      <img src="assets/oi2.jpg" alt="Los Tabaleros" width="118%" height="300px" left="100px">
+          <img src="assets/oi2.jpg" alt="Los Tabaleros" width="118%" height="300px" left="100px">
       </div>
-   </div>
+</div>
+<div>
    <div class="grupo2">
       <div class="foto">
-      <img src="assets/oi3.jpg" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+         <img src="assets/oi3.jpg" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+   </div>
+   <div class="foto">
+      <img src="assets/f2.png" alt="Los Tabaleros" width="105%" height="300px">
+   </div>
+</div>
+<div>
+   <div class="grupo3">
+      <div class="foto">
+         <img src="assets/f1.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
       </div>
       <div class="foto">
-         <img src="assets/oi4.webp" alt="Los Tabaleros" width="105%" height="300px">
+         <img src="assets/f3.png" alt="Los Tabaleros" width="105%" height="300px">
       </div>
-   </div>
+</div>
+<div>
+   <div class="grupo4">
+      <div class="foto">
+         <img src="assets/f6.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+      </div>
+      <div class="foto">
+         <img src="assets/f7.png" alt="Los Tabaleros" width="105%" height="300px">
+      </div>
+</div>
+<div>
+   <div class="grupo5">
+      <div class="foto">
+         <img src="assets/f8.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+      </div>
+      <div class="foto">
+         <img src="assets/f9.png" alt="Los Tabaleros" width="105%" height="300px">
+      </div>
+</div>
+<div>
+   <div class="grupo6">
+      <div class="foto">
+         <img src="assets/f10.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+      </div>
+      <div class="foto">
+         <img src="assets/f11.png" alt="Los Tabaleros" width="105%" height="300px">
+      </div>
+</div>
 <div id="footer">
    <ul class="redes_sociales">
        <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a>
