--- a/Discografía.html
+++ b/Discografía.html
@@ -41,7 +41,7 @@
         </div>
         </div>
         </div>
-    <div class="subtitulo">Discografía</div>
+    <div class="subtitulo2">Discografía</div>
         <ul class="discos1"> 
             <div><img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
             <div><img src="assets/unanoche.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
