--- a/Discografía.html
+++ b/Discografía.html
@@ -42,18 +42,18 @@
         </div>
         </div>
     <div class="subtitulo2">Discografía</div>
-        <ul class="discos1"> 
-            <div><img src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
-            <div><img src="assets/unanoche.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
-        </ul>
-        <ul class="discos2">
-            <div><img src="assets/demonio.jpeg" alt="Los Tabaleros"width="100%" height="320px"></div>
-            <div><img src="assets/chuy.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
-        </ul>
-        <ul class="discos3">
-            <div><img src="assets/OIP.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
-            <div><img src="assets/lolita.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
-         </ul>
+        <div class="discos1"> 
+            <div><img class="contain" src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/unanoche.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+        </div>
+        <div class="discos2">
+            <div><img class="contain" src="assets/demonio.jpeg" alt="Los Tabaleros"width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/chuy.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+        </div>
+        <div class="discos3">
+            <div><img class="contain" src="assets/OIP.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/lolita.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+        </div>
         <button class="button">Descarga</button>
         <div id="footer">
             <ul class="redes_sociales">
