--- a/Galería.html
+++ b/Galería.html
@@ -103,7 +103,7 @@
        <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a>
        <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a> 
    </ul>  
-<p>@lostabaleros</p>
+<p>lostabalerosoficial</p>
 </div class="footer">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
