--- a/Galería.html
+++ b/Galería.html
@@ -98,10 +98,10 @@
 </div>
 <div id="footer">
    <ul class="redes_sociales">
-       <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a>
-       <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a>
-       <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a>
-       <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a> 
+       <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
+       <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
+       <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
+       <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
    </ul>  
 <p>lostabalerosoficial</p>
 </div class="footer">
