--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
     </div>
     <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/1.jpg" class="d-block w-100" alt="iluspato">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/2.jpg" class="d-block w-100" alt="ilusinfra">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/3.jpg" class="d-block w-100" alt="ilustigre">
+          </div>
+        </div>
+      </div>
     <div id="footer"> 
         <ul class="redes_sociales">
             <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
