--- a/Galería.html
+++ b/Galería.html
@@ -45,55 +45,55 @@
 <div>
    <div class="grupo1">
       <div class="foto">
-         <img class="contain" src="assets/oi1.jpg" alt="Los Tabaleros" width="80%" height="300px">
+         <img class="contain" class="rounded float-start" src="assets/oi1.jpg" alt="Los Tabaleros" width="80%" height="300px">
       </div>
       <div class="foto">
-          <img class="contain" src="assets/oi2.jpg" alt="Los Tabaleros" width="118%" height="300px" left="100px">
+          <img class="contain" class="rounded float-end" src="assets/oi2.jpg" alt="Los Tabaleros" width="118%" height="300px" left="100px">
       </div>
 </div>
 <div>
    <div class="grupo2">
       <div class="foto">
-         <img class="contain" src="assets/oi3.jpg" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+         <img class="contain" class="rounded float-start" src="assets/oi3.jpg" alt="Los Tabaleros" width="89%" height="300px" left="10px">
    </div>
    <div class="foto">
-      <img class="contain" src="assets/f2.png" alt="Los Tabaleros" width="105%" height="300px">
+      <img class="contain" class="rounded float-end" src="assets/f2.png" alt="Los Tabaleros" width="105%" height="300px">
    </div>
 </div>
 <div>
    <div class="grupo3">
       <div class="foto">
-         <img class="contain" src="assets/f1.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+         <img class="contain" class="rounded float-start" src="assets/f1.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
       </div>
       <div class="foto">
-         <img class="contain" src="assets/f3.png" alt="Los Tabaleros" width="105%" height="300px">
+         <img class="contain" class="rounded float-end" src="assets/f3.png" alt="Los Tabaleros" width="105%" height="300px">
       </div>
 </div>
 <div>
    <div class="grupo4">
       <div class="foto">
-         <img class="contain" src="assets/f6.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+         <img class="contain" class="rounded float-start" src="assets/f6.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
       </div>
       <div class="foto">
-         <img class="contain" src="assets/f7.png" alt="Los Tabaleros" width="105%" height="300px">
+         <img class="contain" class="rounded float-end" src="assets/f7.png" alt="Los Tabaleros" width="105%" height="300px">
       </div>
 </div>
 <div>
    <div class="grupo5">
       <div class="foto">
-         <img class="contain" src="assets/f8.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+         <img class="contain" class="rounded float-start" src="assets/f8.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
       </div>
       <div class="foto">
-         <img class="contain" src="assets/f9.png" alt="Los Tabaleros" width="105%" height="300px">
+         <img class="contain" class="rounded float-end" src="assets/f9.png" alt="Los Tabaleros" width="105%" height="300px">
       </div>
 </div>
 <div>
    <div class="grupo6">
       <div class="foto">
-         <img class="contain" src="assets/f10.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
+         <img class="contain" class="rounded float-start" src="assets/f10.png" alt="Los Tabaleros" width="89%" height="300px" left="10px">
       </div>
       <div class="foto">
-         <img class="contain" src="assets/f11.png" alt="Los Tabaleros" width="105%" height="300px">
+         <img class="contain" class="rounded float-end" src="assets/f11.png" alt="Los Tabaleros" width="105%" height="300px">
       </div>
 </div>
 <div id="footer">
