--- a/index.html
+++ b/index.html
@@ -47,27 +47,16 @@
     </div>
     <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/1.jpg" class="d-block w-100" alt="iluspato">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/2.jpg" class="d-block w-100" alt="ilusinfra">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/3.jpg" class="d-block w-100" alt="ilustigre">
-          </div>
-        </div>
-      </div>
-    <div id="footer"> 
-        <ul class="redes_sociales">
+    <div id="footer">
+       <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
             <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
             <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
             <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
             <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
-        </ul> 
-    <p>lostabalerosoficial</p>
+      </ul>
+      <div class="mx-auto" style="width: 200px;">
+        lostabalerosoficial
+      </div>
     </div class="footer">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
