--- a/Biografía.html
+++ b/Biografía.html
@@ -50,14 +50,16 @@
     La agrupación define su estilo como un folklor surrealista y desfachatado. La creación de su propia productora también les permitió desarrollar esa obras como “El inconsciente de Lolita” (La Casona del Teatro), “Muerte en la Catedral del Tango” (Catedral del Tango), “El circo del Dr. Kurnicopia” (Teatro Ciego del Abasto), “La Primera Junta del folklor” (Teatro IFT)y "Lolita al desnudo” (Teatro Ciego) entre otros. 
     "¡TUY!", el tercer álbum de Los Tabaleros contó con la dirección de orquesta y producción de Juan Gigena Ábalos. Se grabó en MCL Records, El Gorrion Negro y TUCO Estudio. Fue masterizado por el reconocido ingeniero Daniel Ovie. Michel Peyronel participa en la introducción en francés de "Chiquita".</p>
     <div id="footer">
-        <ul class="redes_sociales">
-            <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
-            <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
-            <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li> 
-        </ul>  
-    <p>lostabalerosoficial</p>
-    </div class="footer">
+      <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
+           <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
+           <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
+           <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
+           <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
+     </ul>
+     <div class="mx-auto" style="width: 200px;">
+       lostabalerosoficial
+     </div>
+   </div class="footer">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
