--- a/Contacto.html
+++ b/Contacto.html
@@ -83,13 +83,15 @@
 </div>
 </div>
 <div id="footer">
-    <ul class="redes_sociales">
-        <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
-        <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
-        <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
-        <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li> 
-    </ul>  
-<p>lostabalerosoficial</p>
+  <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
+       <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
+       <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
+       <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
+       <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
+ </ul>
+ <div class="mx-auto" style="width: 200px;">
+   lostabalerosoficial
+ </div>
 </div class="footer">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
