--- a/Discografía.html
+++ b/Discografía.html
@@ -54,7 +54,7 @@
             <div><img class="contain" src="assets/OIP.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
             <div><img class="contain" src="assets/lolita.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
-        <button class="button">Descarga</button>
+        <button class="button" class="mx-auto" style="width: 200px;">Descarga</button>
         <div id="footer">
           <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
                <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
