--- a/Contacto.html
+++ b/Contacto.html
@@ -92,7 +92,7 @@
  <div class="mx-auto" style="width: 200px;">
    lostabalerosoficial
  </div>
-</div class="footer">
+</div id="footer">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
