--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="animate__animated animate__jackInTheBox">
         <p class="titulo"> Los Tabaleros</p>
     </div>
-    <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
+    <img src="assets/bsannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
     <div id="footer">
        <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
@@ -57,7 +57,7 @@
       <div class="mx-auto" style="width: 200px;">
         lostabalerosoficial
       </div>
-    </div class="footer">
+    </div id="footer">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
