--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="animate__animated animate__jackInTheBox">
         <p class="titulo"> Los Tabaleros</p>
     </div>
-    <img src="assets/bsannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
+    <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
     <div id="footer">
        <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
