cambio de img en discografia

--- a/Discografía.html
+++ b/Discografía.html
@@ -47,8 +47,8 @@
             <div><img class="contain" src="assets/unanoche.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
         <div class="discos2">
-            <div><img class="contain" src="assets/demonio.jpeg" alt="Los Tabaleros"width="100%" height="320px"></div>
-            <div><img class="contain" src="assets/chuy.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/demonio.png" alt="Los Tabaleros"width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/chuy.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
         <div class="discos3">
             <div><img class="contain" src="assets/OIP.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
