cambio disposicion de footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
             <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
       </ul>
-      <div class="mx-auto" style="width: 200px;">
+      <div class="mx-auto" style="width: 200px;" class="position">
         lostabalerosoficial
       </div>
     </div id="footer">
