modificaicones en disco y discos

--- a/Discografía.html
+++ b/Discografía.html
@@ -42,7 +42,8 @@
         </div>
         </div>
     <div class="subtitulo2">Discografía</div>
-        <div class="discos1"> 
+    <div class="discos">
+    <div class="discos1"> 
             <div><img class="contain" src="assets/burbuja loca.png" alt="Los Tabaleros" width="100%" height="320px"></div>
             <div><img class="contain" src="assets/unanoche.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
@@ -54,6 +55,7 @@
             <div><img class="contain" src="assets/uy.png" alt="Los Tabaleros" width="100%" height="320px"></div>
             <div><img class="contain" src="assets/lolita.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
+    </div>
         <button class="button" class="mx-auto" style="width: 200px;">Descarga</button>
         <div id="footer">
           <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
