agrego botones en discografía

--- a/Discografía.html
+++ b/Discografía.html
@@ -47,16 +47,27 @@
             <div><img class="contain" src="assets/burbuja loca.png" alt="Los Tabaleros" width="100%" height="320px"></div>
             <div><img class="contain" src="assets/unanoche.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
+        <div class="botones1">
+          <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
+          <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
+          </div>
         <div class="discos2">
             <div><img class="contain" src="assets/demonio.png" alt="Los Tabaleros"width="100%" height="320px"></div>
             <div><img class="contain" src="assets/chuy.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
+        <div class="botones2">
+          <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
+          <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
+          </div>
         <div class="discos3">
             <div><img class="contain" src="assets/uy.png" alt="Los Tabaleros" width="100%" height="320px"></div>
             <div><img class="contain" src="assets/lolita.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
     </div>
-        <button class="button" class="mx-auto" style="width: 200px;">Descarga</button>
+        <div class="botones3">
+        <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
+        <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
+        </div>
         <div id="footer">
           <div class="redes">
           <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
