cambios en botton en index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
-    <button class="buttonn" class="mx-auto" style="width: 390px">Reservá tu entrada</button>
+    <button class="button3" class="mx-auto" style="width: 390px">Reservá tu entrada</button>
     <br><img src="assets/fotofoto.jpg" class="ff" alt="Los Tabaleros presentación" position="fixed" width="60%"></br>
     <div id="footer">
       <div class="redes">
