cambios en index

--- a/Contacto.html
+++ b/Contacto.html
@@ -67,7 +67,7 @@
                 <div class="form-floating">
                     <textarea class="form-control1" placeholder="Comente aqui" id="floatingTextarea2" style="height: 300px; width: 500px;"></textarea>
                 </div>
-                <button class="button3" class="mx-auto" style="width: 282px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
+                <button class="button3" class="mx-auto" style="width: 282px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
@@ -83,14 +83,14 @@
 </div>
 <div id="footer">
   <div class="redes">
-  <ul class="redes_sociales" class="mx-auto" style="width: 200px">
+  <ul class="redes_sociales1" class="mx-auto" style="width: 200px">
        <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
        <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
        <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
        <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
  </ul>
  </div>
- <div class="mx-auto" style="width: 200px;">
+ <div class="mx-auto1" style="width: 200px;">
    lostabalerosoficial
  </div>
 </div id="footer">
