--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <img class="banner" src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
-    <button class="button3" class="mx-auto" style="width: 220px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Reservá tu entrada</button>
+    <button class="button4" class="mx-auto" style="width: 220px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Reservá tu entrada</button>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -64,7 +64,7 @@
     <br><img src="assets/fotofoto.jpg" class="ff" alt="Los Tabaleros presentación" position="fixed" width="60%"></br>
     <div id="footer">
       <div class="redes">
-       <ul class="redes_sociales" class="mx-auto" style="width: 200px">
+       <ul class="redes_sociales2" class="mx-auto" style="width: 200px">
             <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
             <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
             <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
