cambios en contacto

--- a/Contacto.html
+++ b/Contacto.html
@@ -65,7 +65,7 @@
               </form>
               <label for="floatingTextarea2" class="color">Comentarios</label>
                 <div class="form-floating">
-                    <textarea class="form-control1" placeholder="Comente aqui" id="floatingTextarea2" style="height: 300px; width: 500px;"></textarea>
+                    <textarea class="form-control1" placeholder="Comente aqui" id="floatingTextarea2"></textarea>
                 </div>
                 <button class="button3" class="mx-auto" style="width: 100px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
